--- a/css/styles.css
+++ b/css/styles.css
@@ -1,113 +1,4 @@
-/************* DESIGN SYSTEM
 
-01 -- TYPOGRAPHY
-
-- Font Sizes (px)
-10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
-
-- Font weights
-Default: 400
-Medium: 500
-Semibold: 600
-Bold: 700
-
-- Line heights
-Default: 1
-Small: 1.05
-Paragraph: 1.6
-
-02 -- COLORS
-
-- Primary: #e67e22
-- Tints #fdf2e9
-- Shades #cf711f
-- Accent: 
-- Greys: #555 #333
-
-05 -- SHADOWS
-
-06 -- BORDER RADIUS
-Default: 9px
-
-07 -- WHITESPACE
-
-- Spacing system (px)
-2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
-
-
-**************/
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html {
-  font-size: 62.5%;
-}
-
-body {
-  font-family: "Rubik", sans-serif;
-  line-height: 1;
-  font-weight: 400;
-  color: #555;
-}
-
-
-/*******************************/
-/* GENERAL REUSABLE COMPONENTS */
-/*******************************/
-
-.heading-primary {
-  font-size: 5.2rem;
-  line-height: 1.05;
-  font-weight: 700;
-  color: #333;
-  letter-spacing: -0.5px;
-  margin-bottom: 3.2rem;
-}
-
-.btn:link,
-.btn:visited {
-  display: inline-block;
-  font-size: 2rem;
-  font-weight: 600;
-  text-decoration: none;
-  padding: 1.6rem 3.2rem;
-  border-radius: 1rem;
-
-  transition: all 300ms;
-}
-
-.btn--full:link,
-.btn--full:visited {
-  background-color: #e67e22;
-  color: #fff;
-}
-
-.btn--full:hover,
-.btn--full:active {
-  background-color: #cf711f;
-  color: #fff;
-}
-
-.btn--outline:link,
-.btn--outline:visited {
-  background-color: #fff;
-  color: #555;
-}
-
-.btn--outline:hover,
-.btn--outline:active {
-  background-color: #fdf2e9;
-  color: #555;
-  box-shadow: inset 0 0 0 3px #fff;
-}
-
-.margin-right-sm {
-  margin-right: 1.6rem !important;
-}
 
 /*******************************/
 /* HEADER COMPONENTS */
@@ -225,4 +116,59 @@ header {
 .delivered-text span {
   color: #cf711f;
   font-weight: 700;
+}
+
+/*******************************/
+/* HOW IT WORKS SECTION        */
+/*******************************/
+
+.section-how {
+  padding: 9.6rem 0;
+}
+.step-image-box{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.step-image-box::before,
+.step-image-box::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+}
+
+.step-image-box::before {
+  width: 60%;
+  padding-bottom: 60%;
+  background-color: #fdf2e9;
+  z-index: -2;
+}
+
+.step-image-box::after {
+  width: 45%;
+  padding-bottom: 45%;
+  background-color: #fae5d3;
+  z-index: -1;
+}
+
+.step-img {
+  width: 35%;
+}
+
+.step-number {
+  font-size: 9.8rem;
+  font-weight: 600;
+  color: #ddd;
+  margin-bottom: 1.2rem;
+}
+
+.step-description {
+  font-size: 1.8rem;
+  line-height: 1.8;
 }
