--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,3 @@
-
-
 /*******************************/
 /* HEADER COMPONENTS */
 /*******************************/
@@ -29,17 +27,17 @@ header {
 }
 
 .main-nav-link:link,
-.main-nav-link:visited  {
+.main-nav-link:visited {
   display: inline-block;
   text-decoration: none;
   color: #333;
-  font-weight: 500; 
+  font-weight: 500;
   font-size: 1.8rem;
   transition: all 0.3s;
 }
 
 .main-nav-link:hover,
-.main-nav-link:active  {
+.main-nav-link:active {
   color: #cf711f;
 }
 
@@ -59,7 +57,6 @@ header {
 /*******************************/
 /* HERO COMPONENTS */
 /*******************************/
-
 
 .section-hero {
   background-color: #fdf2e9;
@@ -119,13 +116,43 @@ header {
 }
 
 /*******************************/
+/* FEATURED IN SECTION         */
+/*******************************/
+
+
+.section-featured {
+  padding: 4.8rem 0 3.2rem 0;
+}
+
+.heading-featured-in {
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  letter-spacing: 0.75px;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 2.4rem;
+  color: #888;
+}
+
+.logos {
+  display: flex;
+  justify-content: space-around;
+}
+
+.logos img {
+  height: 3.2rem;
+  filter: brightness(0);
+  opacity: 50%;
+}
+
+/*******************************/
 /* HOW IT WORKS SECTION        */
 /*******************************/
 
 .section-how {
   padding: 9.6rem 0;
 }
-.step-image-box{
+.step-image-box {
   display: flex;
   align-items: center;
   justify-content: center;
