--- a/css/general.css
+++ b/css/general.css
@@ -61,6 +61,10 @@ body {
   color: #555;
 }
 
+strong {
+  font-weight: 500;
+}
+
 /*******************************/
 /* GENERAL REUSABLE COMPONENTS */
 /*******************************/
@@ -166,6 +170,30 @@ body {
   box-shadow: inset 0 0 0 3px #fff;
 }
 
+.link:link,
+.link:visited {
+  display: inline-block;
+  color: #e67e22;
+  text-decoration: none;
+  border-bottom: solid 1px currentColor;
+  padding-bottom: 3px;
+  transition: all 0.3s;
+}
+
+.link:hover,
+.link:active {
+  color: #cf711f;
+  border-bottom: solid 1px transparent;
+}
+
+.center-text {
+  text-align: center;
+}
+
 .margin-right-sm {
   margin-right: 1.6rem !important;
+}
+
+.margin-bottom-md {
+  margin-bottom: 4.8rem !important;
 }
