--- a/css/general.css
+++ b/css/general.css
@@ -29,7 +29,11 @@ Paragraph: 1.6
 #fae5d3
 - Shades #cf711f
 - Accent: 
-- Greys: #555 #333 #888
+- Grays: 
+#555 
+#333 
+#888 
+Lightest grays: #6f6f6f
 
 05 -- SHADOWS
 
