--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 /* HEADER COMPONENTS */
 /*******************************/
 
-header {
+.header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -119,7 +119,6 @@ header {
 /* FEATURED IN SECTION         */
 /*******************************/
 
-
 .section-featured {
   padding: 4.8rem 0 3.2rem 0;
 }
@@ -209,15 +208,15 @@ header {
 }
 
 .meal {
-  box-shadow: 0 2.4rem 4.8rem rgba(0,0,0,0.075);
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
   border-radius: 11px;
   overflow: hidden;
-  transition: all 0.4s; 
+  transition: all 0.4s;
 }
 
 .meal:hover {
   transform: translateY(-1rem);
-  box-shadow: 0 3.2rem 6.4rem rgba(0,0,0,0.05);
+  box-shadow: 0 3.2rem 6.4rem rgba(0, 0, 0, 0.05);
 }
 
 .meal-img {
@@ -257,7 +256,6 @@ header {
   background-color: #ffd43b;
 }
 
-
 .meal-title {
   font-size: 2.4rem;
   color: #333;
@@ -288,26 +286,6 @@ header {
 .all-recipes {
   text-align: center;
   font-size: 1.8rem;
-}
-
-.list {
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  gap: 1.6rem;
-}
-
-.list-item {
-  font-size: 1.8rem;
-  display: flex;
-  align-items: center;
-  gap: 1.6rem;
-}
-
-.list-icon {
-  height: 3rem;
-  width: 3rem;
-  color: #e67e22;
 }
 
 /*******************************/
@@ -368,4 +346,107 @@ header {
 
 .gallery-item img:hover {
   transform: scale(1.1);
+}
+
+/*******************************/
+/* PRICING SECTION              */
+/*******************************/
+
+.section-pricing {
+  padding: 9.6rem 0;
+}
+
+.pricing-plan {
+  border-radius: 11px;
+  width: 75%;
+}
+
+.plan-header {
+  text-align: center;
+  margin-bottom: 4.8rem;
+}
+
+.plan-name {
+  color: #cf711f;
+  font-weight: 600;
+  font-size: 2rem;
+  text-transform: uppercase;
+  letter-spacing: 0.75;
+  margin-bottom: 3.2rem;
+}
+.plan-price {
+  font-size: 6.2rem;
+  font-weight: 600;
+  color: #333;
+  margin-bottom: 1.6rem;
+}
+
+.plan-price span {
+  font-size: 3rem;
+  font-weight: 500;
+  margin-right: 0.8rem;
+}
+
+.plan-text {
+  font-size: 1.6rem;
+  line-height: 1.6;
+  color: #6f6f6f;
+}
+
+.plan-sign-up {
+  text-align: center;
+  margin-top: 4.8rem;
+}
+
+.plan-details {
+  font-size: 1.6rem;
+  line-height: 1.6;
+  text-align: center;
+}
+
+.pricing-plan--starter {
+  justify-self: end;
+  border: 2px solid #fdf2e9;
+  padding: 4.6rem;
+}
+
+.pricing-plan--complete {
+  background-color: #fdf2e9;
+  padding: 4.8rem;
+  position: relative;
+  overflow: hidden;
+}
+
+.pricing-plan--complete::after {
+  content: "Best value";
+  background-color: #ffd43b;
+  color: #333;
+  position: absolute;
+  top: 5%;
+  right: -20%;
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  font-weight: 700;
+  padding: 0.8rem 8rem;
+  transform: rotate(45deg);
+}
+
+.feature-icon {
+  color: #e67e22;
+  height: 3.2rem;
+  width: 3.2rem;
+  margin-bottom: 3.2rem;
+  background-color: #fdf2e9;
+  padding: 1.6rem;
+  border-radius: 50%;
+}
+.feature-title {
+  font-size: 2.4rem;
+  font-weight: 700;
+  columns: #333;
+  margin-bottom: 1.6rem;
+}
+.feature-text {
+  font-size: 1.8rem;
+  line-height: 1.8;
 }
