--- a/css/queries.css
+++ b/css/queries.css
@@ -2,9 +2,9 @@
 /* BELOW 1344px MAX WIDTH      */
 /*******************************/
 
-@media (max-width: 84em){
+@media (max-width: 84em) {
   .hero {
-    max-width: 120rem;    
+    max-width: 120rem;
   }
   .heading-primary {
     font-size: 4.4rem;
@@ -18,13 +18,13 @@
 /***************************************************/
 /* BELOW 1200px MAX WIDTH (Landscapte Tablets)     */
 /***************************************************/
-@media (max-width: 75em){
+@media (max-width: 75em) {
   html {
     /* 9px/16px */
     font-size: 56.25%;
   }
 
-  .grid{
+  .grid {
     column-gap: 4.8rem;
     row-gap: 6.4rem;
   }
@@ -57,7 +57,7 @@
 /* BELOW 944px MAX WIDTH (Portrait Tablets)        */
 /***************************************************/
 
-@media (max-width: 59em){
+@media (max-width: 59em) {
   html {
     /* 8px/16px */
     font-size: 50%;
@@ -110,5 +110,59 @@
   }
   .btn--form {
     margin-top: 1.2rem;
+  }
+
+  .btn-mobile-nav {
+    display: block;
+  }
+
+  .main-nav {
+    background-color: rgba(255, 255, 255, 0.97);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: translateX(100%);
+    transition: all 0.3s ease-in;
+
+    /* Hide navigation */
+    /* display: none; */
+    /* ^Doesn't allow transitions */
+
+    /* 1) Hide it visually, still can get to the links with tab */
+    opacity: 0;
+    /* 2) Make it unaccesible to mouse and keyboard*/
+    pointer-events: none;
+    /* 3) Hide it from screen readers*/
+    visibility: hidden;
+  }
+
+  .nav-open .main-nav {
+    opacity: 1;
+    pointer-events: auto;
+    visibility: visible;
+    transform: translateX(0%);
+  }
+
+  .nav-open .icon-mobile-nav[name="menu-outline"] {
+    display: none;
+  }
+  .nav-open .icon-mobile-nav[name="close-outline"] {
+    display: block;
+  }
+
+  .main-nav-list {
+    flex-direction: column;
+    gap: 4.8rem;
+  }
+
+  .main-nav-link:link,
+  .main-nav-link:visited {
+    font-size: 3rem;
   }
 }
