--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
   height: 9.6rem;
   padding: 0 4.8rem;
   position: relative;
+  z-index: 999;
 }
 
 .logo {
@@ -70,6 +71,23 @@
 
 .icon-mobile-nav[name="close-outline"] {
   display: none;
+}
+
+/* Sticky navigation */
+.sticky .header {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.97);
+  height: 8rem;
+  padding-top: 0;
+  padding-bottom: 0;
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
+}
+
+.sticky .section-hero {
+  margin-top: 9.6rem;
 }
 
 /*******************************/
